k8s/namespaces/cassandra/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: cassandra
  labels:
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/part-of: cassandra
spec:
  type: ClusterIP
  ports:
  - port: 9042
    targetPort: 9042
  selector:
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/part-of: cassandra
---
