k8s/namespaces/cassandra/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra
  labels:
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/part-of: cassandra
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cassandra
  labels:
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/part-of: cassandra
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
