k8s/namespaces/cassandra/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra
  namespace: cassandra
  labels:
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/part-of: cassandra
spec:
  egress:
  - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: thehive
    ports:
    - port: 9042
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cassandra
      app.kubernetes.io/part-of: cassandra
  policyTypes:
  - Ingress
  - Egress
